# rust-web-app

./: .dockerignore  .gitignore  .tool-versions  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  openapi.yml  openapitools.json  package-lock.json  prometheus.Dockerfile  prometheus.yml
src/: main.rs
