[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-prom = "0.6.0"
chrono = "0.4.20"
rust-web-app-client = { version = "0.0.0", path = "client" }
uuid = "1.1.2"
