[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-prom = "0.6.0"
chrono = "0.4.20"
deadpool-postgres = "0.10.2"
indoc = "1.0.7"
prometheus = { version = "0.13.1", features = ["process"] }
rust-web-app-client = { version = "0.0.0", path = "client" }
serde = { version = "1.0.142", features = ["serde_derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.6", features = ["with-uuid-1", "with-chrono-0_4"] }
uuid = "1.1.2"
